// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Array [
  <div
    className="RatesTable__PaginationWrapper-w8xhh9-0 jVDtaU"
  />,
  <table
    className="RatesTable__TableWrapper-w8xhh9-1 bZrfOn"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colSpan={1}
          role="columnheader"
        >
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Name
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Type
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Unit
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </td>
        <td
          role="cell"
        >
          
        </td>
        <td
          role="cell"
        >
          
        </td>
        <td
          role="cell"
        >
          
        </td>
        <td
          role="cell"
        >
          
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`without data 1`] = `
Array [
  <div
    className="RatesTable__PaginationWrapper-w8xhh9-0 jVDtaU"
  />,
  <table
    className="RatesTable__TableWrapper-w8xhh9-1 bZrfOn"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colSpan={1}
          role="columnheader"
        >
          <div>
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Name
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Type
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Unit
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    />
  </table>,
]
`;
